<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:background="#ffffff"
    android:orientation="vertical">
    <TableLayout
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:background="#e6e2e2"
            android:layout_width="match_parent"
            android:layout_height="48dp">
        </LinearLayout>
        <TableRow
            android:gravity="center">
            <ImageView
                android:id="@+id/imv_avatar"
                android:scaleType="center"
                android:background="@drawable/ic_avatars"
                android:layout_width="116dp"
                android:layout_height="116dp"
                android:contentDescription="@string/dang_nhap" />
            <TextView
                android:id="@+id/tv_name"
                android:text="@string/dang_nhap"
                android:textSize="24sp"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                android:paddingLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </TableRow>
        <LinearLayout
            android:background="#e6e2e2"
            android:layout_width="match_parent"
            android:layout_height="48dp">
        </LinearLayout>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="72dp">
            <ImageView
                android:id="@+id/img_add"
                android:src="@drawable/ic_add_adress"
                android:layout_width="72dp"
                android:layout_height="48dp"
                android:contentDescription="@string/them_dia_diem" />
            <TextView
                android:layout_gravity="center_vertical"
                android:text="@string/them_dia_diem"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="72dp">
            <ImageView
                android:id="@+id/img_notification"
                android:src="@drawable/ic_notifications"
                android:layout_width="72dp"
                android:layout_height="48dp"
                android:contentDescription="@string/thong_bao" />
            <TextView
                android:layout_gravity="center_vertical"
                android:text="@string/thong_bao"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_star"
                android:layout_width="72dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_star"
                android:contentDescription="@string/danh_gia_ung_dung" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/danh_gia_ung_dung"
                android:textColor="#000000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="72dp">
            <ImageView
                android:id="@+id/img_person"
                android:src="@drawable/ic_person_add"
                android:layout_width="72dp"
                android:layout_height="48dp"
                android:contentDescription="@string/them_ban_be" />
            <TextView
                android:layout_gravity="center_vertical"
                android:text="@string/them_ban_be"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="72dp">
            <ImageView
                android:id="@+id/img_setting"
                android:src="@drawable/ic_settings"
                android:layout_width="72dp"
                android:layout_height="48dp"
                android:contentDescription="@string/cai_dat" />
            <TextView
                android:layout_gravity="center_vertical"
                android:text="@string/cai_dat"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
    </TableLayout>
</LinearLayout>